# Track_Avatar

./: CMakeLists.txt  README.md  RealsensePipeline.py  gui.py  package.xml
gui/: package.xml  setup.py
gui/gui/: gui_node.py  gui_visual_test.py  vision_test.py
launch/: display.launch.py
meshes/: Elbow_XL430_1.stl  Wrist_Pitch_XL430_1.stl  Wrist_Yaw_XL430_1.stl  base_link.stl  fr12_h101_k_v1_1.stl  fr12_s102_k_v1_1.stl
my_robot_description/: package.xml  setup.py
my_robot_description/launch/: display.launch.py
my_robot_description/meshes/: Shoulder_Pitch_XM430_1.stl  Shoulder_Roll_XL430_1.stl  Shoulder_Yaw_XL430_1.stl  fr12-h104_v1_1.stl  fr12-h104_v1_2_1.stl  fr12_s102_k v1 (1).stl  humanoid_robot_arm_v2_lower_arm_conn_1_v2_1.stl  humanoid_robot_arm_v2_lower_arm_conn_2_v2_1.stl
my_robot_description/my_robot_description/: dxl_subscriber.py  rviz_control.py
my_robot_description/rviz/: view_success.rviz
my_robot_description/urdf/: humanoid.urdf
rviz/: view.rviz  view_2.rviz
src/: chanwoo_dxl_subscriber_groupsync.py  chanwoo_dxl_subscriber_sync_ema  chanwoo_dxl_subscriber_time_based_profile.py  chanwoo_dxl_subscriber_velocity.py  clock.py  dxl_subscriber.py  dxl_subscriber_cw.py  dxl_subscriber_js.py  dxl_test.py  gui.py  jerk_limit_filter.py  pose.py  rviz_control.py  tts.py  vision.py  vision_nav.py  vision_nk.py
urdf/: humanoid.urdf  humanoid.xacro
